# Lesson-QT_2

Task_1_v1/: CMakeLists.txt  connectdb.cpp  connectdb.h  connectdb.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  styleprog.cpp  styleprog.h
Task_2_v1_client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Task_2_v1_server/: CMakeLists.txt  server.cpp  server.h
